# JITCourse

./: .gitignore  flake.nix  justfile
code/L01-75-Tooling/classload/: Main.java  justfile
code/L01-75-Tooling/classload/plugins/: HelloPlugin.java
code/L01-75-Tooling/ide/src/: config.ini
code/L01-75-Tooling/jvmti/: patcher.c
code/L01-75-Tooling/reflection/: Main.java  justfile
code/L01-75-Tooling/simple/: justfile
code/L01-75-Tooling/simple/src/com/example/hello/: Main.java
code/L01-Basics/benchmark/: pom.xml
code/L01-Basics/benchmark/native/: CMakeLists.txt  native_bench.cpp
code/L01-Basics/benchmark/src/main/java/org/bench/: BetterBench.java  NativeLib.java  SimpleBench.java
code/L01-Basics/gnu_lightning/: CMakeLists.txt  fib.c  flake.nix
code/L02-Bytecode/bytecode-guess/: justfile  pom.xml
code/L02-Bytecode/bytecode-guess/src/main/java/: BytecodeApp.java
code/L02-Bytecode/chess/: justfile  pom.xml
code/L03-Interp/lisp/: 01_fib.scm  02_tail_fib.scm  03_functions.scm  04_closures.scm  05_eval.scm  06_codegen.scm  justfile  run_all.scm
slides/lecture-01/: main.typ
slides/lecture-01-75/: main.typ
slides/lecture-02/: main.typ
slides/lecture-03/: main.typ
theme/: common.typ
